<resources>
    <string name="app_name">sportyfield</string>
    <string name="action_addFilter">Add filter</string>
    <string name="change_profile">Submit</string>
    <string name="action_rmFilter">Remove filter</string>
    <string name="action_returnMap">Return to Map</string>
    <string name="action_createEvent">Create event</string>
    <string name="action_addReport">Add a report</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_fieldInfo">Information</string>
    <string name="reports">report</string>
    <string name="clickedMarkerTitle">Add new field ?</string>
    <string name="clickedMarkerText">Click to add new field.</string>
    <string name="youMarkerTitle">You</string>
    <string name="youMarkerText">You are here.</string>
    <string name="facebook_app_id">933583286797124</string>
    <string name="fb_login_protocol_scheme">fb933583286797124</string>

    <string name="loading">Loading</string>
    <string name="open_drawer">Opening</string>
    <string name="close_drawer">Closing</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="userName">UserName</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_change_profile">Update your personal information</string>

</resources>
